<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.aguai.weidian.activity.MainActivity">
    <include layout="@layout/actionbar_layout"/>
    <com.aguai.weidian.views.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@+id/toolbar_lay"
      />
    <LinearLayout
        android:layout_below="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="-30dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="10dp"
           >
            <android.support.v7.widget.CardView
                android:id="@+id/addtext"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                app:cardCornerRadius="4dp"
                android:layout_weight="1"
                app:cardElevation="6dp"
                >
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_imp_text"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/discount"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zhekou"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="10dp"
           >
            <android.support.v7.widget.CardView
                android:id="@+id/modifyinfo"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                app:cardCornerRadius="4dp"
                android:layout_weight="1"
                app:cardElevation="6dp"
                >
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_price"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_delete"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
