<?xml version="1.0" encoding="utf-8"?>
<com.balysv.materialripple.MaterialRippleLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:mrl_rippleOverlay="true"
    app:mrl_rippleColor="?attr/colorPrimary"
    android:layout_margin="2dp">
    <android.support.v7.widget.CardView
        android:id="@+id/flexible.example.cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/headpic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                />
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_toRightOf="@+id/headpic"
                android:layout_toLeftOf="@+id/checkbox"
                android:text="@string/app_name"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
               />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/headpic"
                android:layout_toLeftOf="@+id/checkbox"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/title">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales"
                    android:textSize="12dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:id="@+id/sales"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="12dp"
                    android:singleLine="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inventory"
                    android:textSize="12dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:id="@+id/inventory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="12dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="12dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="12dp"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <com.rey.material.widget.CheckBox
                android:id="@+id/checkbox"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</com.balysv.materialripple.MaterialRippleLayout>