<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        	 <RelativeLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		       	>
				<de.hdodenhof.circleimageview.CircleImageView
				    android:id="@+id/touxiang"
				    android:layout_width="80dp"
				     android:layout_height="80dp"
				     android:src="@mipmap/ic_launcher"
				     android:layout_centerHorizontal="true"
				    />
		        <LinearLayout
		            android:id="@+id/mainlayout"
		            android:layout_marginTop="40dp"
		            android:layout_below="@+id/touxiang"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical">
		
		            <RelativeLayout
		                android:layout_width="match_parent"
		                android:layout_height="48dp" >
		               <RelativeLayout
		                  android:layout_width="fill_parent"
		                  android:layout_height="wrap_content"
		                  android:orientation="horizontal"
		                  android:layout_marginLeft="40dp"
		                  android:layout_marginRight="40dp"
		                 >
		                <ImageView
		                    android:id="@+id/iv_username"
		                    android:layout_width="20dp"
		                    android:layout_height="20dp"
		                    android:src="@mipmap/icon_account"
		                    android:layout_centerVertical="true"
		                    />
						   <EditText
		                    android:id="@+id/username"
		                    android:layout_marginLeft="20dp"
		                    android:layout_width="match_parent"
		                    android:layout_toRightOf="@+id/iv_username"
		                    android:layout_height="40dp"
		                    android:hint="@string/appkey"
		                    android:singleLine="true"
		                    android:textColorHint="#999999"
		                    android:textSize="16sp"
		                    android:layout_centerVertical="true"
		                     />
		                </RelativeLayout>
		            </RelativeLayout>

		            <RelativeLayout
		                android:layout_width="match_parent"
		                android:layout_height="48dp"
		             >
		              <RelativeLayout
		                  android:layout_width="fill_parent"
		                  android:layout_height="wrap_content"
		                  android:orientation="horizontal"
		                  android:layout_marginLeft="40dp"
		                  android:layout_marginRight="40dp"
		                  >
		                   <ImageView
		                    android:id="@+id/iv_userpass"
		                    android:layout_width="20dp"
		                    android:layout_height="20dp"
		                    android:src="@mipmap/icon_pwd"
		                    android:layout_centerVertical="true"
		                    />
		                <EditText
		                    android:id="@+id/userpasswd"
		                     android:layout_marginLeft="20dp"
		                    android:layout_width="match_parent"
		                    android:layout_height="40dp"
		                    android:layout_toRightOf="@+id/iv_userpass"
		                    android:hint="@string/secret"
		                    android:password="true"
		                    android:singleLine="true"
		                    android:textColorHint="#999999"
		                    android:layout_centerVertical="true"
		                    android:textSize="16sp" />
		              </RelativeLayout>


		            </RelativeLayout>

		            <Button
		                android:id="@+id/btn_login"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="24dp"
		                android:layout_marginLeft="40dp"
		                android:layout_marginRight="40dp"
		                android:text="登录"
		                android:layout_gravity="center_horizontal"
		                android:textColor="@android:color/white"
		                android:textSize="18dp"
						android:background="@color/colorPrimary"
						/>
						<RelativeLayout
						    android:layout_width="fill_parent"
						    android:layout_height="wrap_content"
						    android:layout_margin="40dp">
				            <TextView
				                android:id="@+id/tv_help"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:text="@string/help"
				                android:textSize="16dp" />
						</RelativeLayout>

		        </LinearLayout>

		 </RelativeLayout>
</RelativeLayout>
